# quant-garage

./: .gitignore  AUDIT-LOG.md  AUDIT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN-MATRIX.md  PROPOSED-TOOLS.md  README.md  REVIEW-FINDINGS.md  package-lock.json  package.json  pyproject.toml  requirements.txt
assets/: closing.html  og.html  skills.html
examples/: demo-session.ipynb  run-8-k-scanner.py  run-aapl-tier-b.py  run-aapl.py  run-analyst-tracker.py  run-backtest-data-prep.py  run-best-ex-check.py  run-change-point-detector.py  run-commodity-cycle.py  run-corp-actions.py  run-corporate-actions-scanner.py  run-crypto-vol-scanner.py  run-earnings-blackout.py  run-earnings-drilldown.py  run-earnings-week-prep.py  run-event-study.py  run-factor-research.py  run-filing-sentiment.py  run-filing-triangulation.py  run-fixed-income-context.py  run-guidance-tracker.py  run-hedge-suggester.py  run-historical-analog-finder.py  run-historical-comparison.py  run-hurst-exponent.py  run-insider-flow.py  run-macro-basket.py  run-macro-event-calendar.py  run-manager-portfolio-diff.py  run-market-regime.py  run-mc-portfolio-simulator.py  run-morning-brief.py  run-news-scanner.py  run-options-flow.py  run-options-structure-analyzer.py  run-pairs-scanner.py  run-pitch-comps.py  run-portfolio-macro-scenario.py  run-portfolio-mark.py  run-portfolio-rebalancer.py  (+30 more)
lib/quant_garage/: __init__.py  annualize.py  as_of.py  client.py  output.py  risk.py  technicals.py  timezones.py
quant_garage/: __init__.py  as_of.py  backtest.py  client.py  monte_carlo.py  peer_catalog.py  peers.py  percentile.py  performance.py  risk.py  sizing.py  snapshot.py  stats.py  technicals.py  timezones.py  universe.py
quant_garage/data/: __init__.py  loughran_mcdonald.py
quant_garage/skills/: __init__.py  analyst_tracker.py  commodity_cycle.py  (+57 more)
scripts/: audit-requires.mjs  render-assets.sh
(+412 files in other folders)
