[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-garage"
version = "0.1.0"
description = "Analyst-quality market research workflows for the Massive API. Twenty tools, one framework."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rob Gourley", email = "rgourley@gmail.com" }]
requires-python = ">=3.10"
keywords = ["quant", "finance", "market-data", "massive", "polygon", "analyst", "research"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]

# Core install is intentionally slim — the workflow layer needs numpy for
# indicator math and requests for the Massive client. Heavy skills declare
# their own extras (see below).
dependencies = [
  "requests>=2.31",
  "numpy>=1.26",
]

[project.optional-dependencies]
# factor-research + backtest-data-prep need pandas/scipy/parquet.
research = [
  "pandas>=2.0",
  "scipy>=1.11",
  "pyarrow>=15.0",
]
# Flat-files S3 path for the universe-wide skills.
flatfiles = [
  "boto3>=1.34",
  "s3fs>=2024.6",
]
# portfolio-mark live mode.
live = [
  "websocket-client>=1.7",
]
# Everything.
all = [
  "quant-garage[research,flatfiles,live]",
]

[project.urls]
Homepage = "https://github.com/rgourley/quant-garage"
Issues = "https://github.com/rgourley/quant-garage/issues"

[tool.setuptools.packages.find]
include = ["quant_garage*"]
exclude = ["examples*", "site*", "scripts*", "assets*"]
